--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,38 +21,45 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 0; 
+    background: #E5E5E5;
 }
 
-.wraper {
-    display: flex;
-    justify-content: center;
-    background: #FFFFFF;
-}
+// .wraper {
+//     display: flex;
+// }
 
 
 .container {
-    display: flex;
-    // flex-direction: column;
-    justify-content: center;
-    width: 70%;
-    border: solid 1px blue;
 
+    display: flex;
+    // justify-content: center;
+    margin: 0 auto;
+    width: 1100px;
+
+}
+
+.menu-wraper {
+    display: flex;
+    flex-wrap: wrap;
     height: 100vh;
+    // justify-content: start;
+    background: #FFFFFF;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-width: 290px;
+    min-width: 260px;
+    height: 100vh;
 }
 
 .menu-user {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 57px;
+    margin-top: 50px;
 
     &__foto {
         width: 96px;
@@ -80,15 +87,13 @@ body {
     font-size: 14px;
     text-transform: uppercase;
     color: #707C97;
-    height: 400px;
-    // margin-top: 83px;
+    height: 100%;
+    margin-top: 70px;
 
     &__item {
         display: flex;
         align-items: center;
         height: 40px;
-        
-        // margin-bottom: 43px;
         padding-left: 38px;
 
         &_img {
@@ -99,14 +104,14 @@ body {
 
 
 .menu-auth {
-
+    margin-top: 50px;
+    margin-bottom: 30px;
 
     &__wraper {
         display: flex;
         align-items: center;
         height: 40px;
-        margin-left: 38px;
-        margin-bottom: 48px;
+        margin-left: 38px;   
 
         &_img {
             margin-right: 18px;
@@ -124,10 +129,10 @@ body {
 
 
 
-.content {
-    display: flex;
+.component {
+    // display: flex;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     // background-color: red;
     background: linear-gradient(180deg, #F3F3FB 0%, #FDFBFD 100%);
 }
